src/styles/components/Navbar.scss
nav.navbar {
  height: 70px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.12);
  position: fixed;
  background: #fff;
  width: 100%;
  top: 0;
  img {
    height: 50px;
  }
  ul {
    list-style: none;
    li {
      display: inline-block;
      margin-left: $spacing-small;
      font-size: 14px;
      font-weight: 600;
      color: $darkGreenColor;
      a {
        color: $darkGreenColor;
        text-decoration: none;
        font-size: 14px;
      }
    }
  }
}

@media (min-width: 860px) {
  nav.navbar {
    height: 100px;
    padding: 1.5rem;
    img {
      height: 75px;
    }
    ul {
      li {
        margin-left: $spacing-xlarge;
        font-size: 30px;
        font-weight: 600;
      }
    }
  }
}

